fixes for collapsed navbar adn font sizes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -40,48 +40,13 @@ body{
   height:100%;
   float: left;
   margin-left:2%;
+  width:5%;
 }
 
 .navbar_container{
   background-color: rgba(255, 0, 0, 0.9);
   width:100%;
   height:4vw;
-}
-
-.navbar{
-  height:100%;
-  width:60%;
-  margin-left:29%;
-  margin-bottom: 0px;
-}
-
-.navbar_entry{
-  float:left;
-  height:100%;
-  width:20%;
-}
-
-.navbar_link{
-  font-weight: normal;
-  font-size: 1.5vw;
-  font-family: 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
-  color:white;
-  border-bottom: 2px solid transparent;
-  text-decoration: none;
-}
-
-.navbar_link:hover{
-  color: rgb(253, 113, 113);
-  text-decoration: none;
-}
-
-.navbar_link_highlighted{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color:white;
-  font-size: 1.5vw;
-  text-decoration: none;
-  border-bottom: 2px solid;
-  border-color: white;
 }
 
 .side_content{
@@ -136,12 +101,6 @@ body{
   width:20px;
 }
 
-
-
-
-
-
-
 /* TESTING */
 
 /* Add a black background color to the top navigation */
@@ -156,9 +115,17 @@ body{
   color: #f2f2f2;
   text-align: center;
   height:100%;
-  width:15%;
+  width:10%;
   text-decoration: none;
-  font-size: 2vw;
+  font-size: 1.5vw;
+}
+
+.topnav a:hover{
+  background-color: darkred;
+}
+
+.topnav a:first-of-type{
+  margin-left: 7%;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -170,10 +137,31 @@ body{
   display: none;
 }
 
+/* Set minimum size for the navbarlinks of 10px at screenwidth of 600px */
+@media screen and (max-width: 600px) {
+  .topnav a{
+    font-size: 10px;
+    width: 12%;
+  }
+}
+
+/* Set maximum size for the navbarlinks of 16px at screenwidth of 1200px */
+@media screen and (min-width: 1200px) {
+  .topnav a{
+    font-size: 16px;
+  }
+}
+
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 450px) {
-  .topnav a:not(:last-child) {display: none;}
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a:first-of-type{
+    margin-left: 0%;
+  }
 
   .topnav a.icon {
     font-size: 7vw;
@@ -181,10 +169,6 @@ body{
     display: block;
     color: white;
   }
-}
-
-/* The "responsive" class is added to the topnav with script when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 450px) {
 
   .topnav.responsive {
     position: absolute;
@@ -193,28 +177,20 @@ body{
     color:white;
   }
 
-  .topnav.responsive a.close {
-    display: inline;
-    color:white;
-    position: absolute;
-    float: right;
-    display: block;
-  }
   .topnav.responsive a {
     background-color: rgba(255, 0, 0, 0.9);
     font-size: 4vw;
-    height: 5%;;
-    width: 150px;
+    height: 30px;
+    width: 40vw;
     float: none;
     display: block;
     text-align: right;
     text-align: center;
+    margin-left:60vw;
   }
 }
 
 /* TESTING */
-
-
 
 
 @media (max-width: 450px){
@@ -226,6 +202,10 @@ body{
   .slideshow{
     width:90%;
     margin-left:5%;
+  }
+
+  .logo_image{
+    width:10%;
   }
 
   body{
@@ -242,24 +222,6 @@ body{
 
   .navbar_container{
     height: 12vw;
-  }
-
-  .navbar{
-    width:70%;
-    margin-left:25%;
-  }
-
-  .navbar_link{
-    font-size: 4vw;
-  }
-
-  .navbar_link_highlighted{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:white;
-    font-size: 15px;
-    text-decoration: none;
-    border-bottom: 2px solid;
-    border-color: white;
   }
 }
 
