--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -24,7 +24,7 @@ body{
 }
 
 .nextEvents_entry{
-  font-size:10px;
+  font-size:8px;
   border-bottom: 1px black solid;
 }
 
