--- a/src/app/impressum/impressum.component.css
+++ b/src/app/impressum/impressum.component.css
@@ -1,5 +1,5 @@
 body{
-  height:550px;
+  height:100vh;
 }
 
 .text_container{
